fixed nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,23 @@ nav {
     font-family: 'Lato', sans-serif;
 }
 
+
+.splash-2 {
+    background-color: #9abaf1;
+    background-image: url("../images/BlueBackground.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: soft-light;
+    margin: 50px 0 0 0;
+    padding: 5px 20px 20px 20px;
+    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 2fr 6fr 8fr;
+    gap: 2px;
+    
+    font-family: 'Lato', sans-serif;
+}
+
 .splash-item-1 {
     grid-column-start: 2;
 }
